# Vit

./: .gitignore  CMakeLists.txt  README.md  build.sh  vcpkg.json  vit.sh  your_program.sh
ai-testing/: CMakeLists.txt  build_examples.sh  ollama_example.cpp  openai_example.cpp
src/: branch.cpp  branch.hpp  commit.cpp  commit.hpp  main.cpp
src/ai/: ai_client.cpp  ai_client.hpp  ollama_client.cpp  ollama_client.hpp  openai_client.cpp  openai_client.hpp
src/features/: comment_generator.cpp  comment_generator.hpp  commit_splitter.cpp  commit_splitter.hpp  interactive_review.cpp  interactive_review.hpp  review_generator.cpp  review_generator.hpp
src/utils/: change_analyzer.cpp  change_analyzer.hpp  file_utils.cpp  file_utils.hpp
